--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,3 +20,7 @@ steps:
 images:
   - us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:${SHORT_SHA}
   - us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest
+
+
+options:
+  logging: CLOUD_LOGGING_ONLY
