--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,8 +8,8 @@ steps:
             '.',
             #'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
            # '--cache-from',
-           #'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
-           # '.'
+            'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
+            '.'
           ]
 
   # Docker push to Google Artifact Registry
