--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,13 +3,17 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [
             'build',
-            '-t',
-            'us-central1-docker.pkg.dev/training-2024-batch/python-repo/my-app:${SHORT_SHA}',
-            '.',
+
+             '-t', 'us-central1-docker.pkg.dev/training-2024-batch/python-repo/my-app:${SHORT_SHA}',
+             '-t', 'us-central1-docker.pkg.dev/training-2024-batch/python-repo/my-app:latest',
+             '.'
+            #'-t',
+            #'us-central1-docker.pkg.dev/training-2024-batch/python-repo/my-app:${SHORT_SHA}',
+           # '.',
             #'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
            # '--cache-from',
-            'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
-            '.'
+          #  'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
+           # '.'
           ]
 
   # Docker push to Google Artifact Registry
